--- a/src/app/Components/Homepage/homeadminindustriales/homesadminindustriales.component.html
+++ b/src/app/Components/Homepage/homeadminindustriales/homesadminindustriales.component.html
@@ -4,6 +4,7 @@
 </div>
 
 <div class="grid-container">
+  <!-- TARJETA EQUIPOS -->
   <div class="grid-item">
     <div class="card">
       <div class="card-body">
@@ -23,6 +24,7 @@
     </div>
   </div>
 
+  <!-- TARJETA MANTENIMIENTOS -->
   <div class="grid-item">
     <div class="card">
       <div class="card-body">
@@ -36,6 +38,26 @@
           </button>
           <button type="button" class="btn btn-outline-success" (click)="showViewMantenimientosIndustriales()">
             Ver Mantenimientos
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- TARJETA PROGRAMACIÓN -->
+  <div class="grid-item">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title" style="text-align: center; margin-bottom: 1px;">PROGRAMACIÓN DE Mantenimientos</h5>
+        <div style="text-align: center; margin-bottom: 30px;">
+          <i class="bi bi-calendar-check" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
+        </div>
+        <div class="d-flex justify-content-between gap-3">
+          <button type="button" class="btn btn-outline-primary" (click)="goToProgramarMantenimiento()">
+            Programar Mantenimientos
+          </button>
+          <button type="button" class="btn btn-outline-success" (click)="goToVerProgramacion()">
+            Ver Programación
           </button>
         </div>
       </div>
