--- a/src/app/Components/navbars/IndustrialesNavbar/industrialesnavbar.component.html
+++ b/src/app/Components/navbars/IndustrialesNavbar/industrialesnavbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/adminindustriales">AppHusrt</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -9,8 +10,42 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/admusuarios">Usuarios</a>
         </li>
+
+        <!-- Dropdown Equipos -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Equipos Industriales
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/Industriales/nuevoequipoindustrial">Crear Equipo</a></li>
+            <li><a class="dropdown-item" href="/adminequipos">Listar Equipos</a></li>
+          </ul>
+        </li>
+
+        <!-- Dropdown Planes -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Planes de Mantenimiento
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/industriales/crear-plan-mantenimiento">Crear Plan</a></li>
+            <li><a class="dropdown-item" href="/industriales/gestion-plan-mantenimiento">Listar Planes</a></li>
+          </ul>
+        </li>
+
+        <!-- Dropdown Programación -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Programación
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/industriales/programar-mantenimiento">Programar Mantenimiento</a></li>
+            <li><a class="dropdown-item" href="/industriales/ver-programacion">Ver Programación</a></li>
+          </ul>
+        </li>
       </ul>
-      <button type="button" class="btn btn-outline-dark" style="justify-content: right;" (click)="navigateToAbout()">Cerrar Sesión</button>
+      <button type="button" class="btn btn-outline-dark" style="justify-content: right;"
+        (click)="navigateToAbout()">Cerrar Sesión</button>
     </div>
   </div>
 </nav>
